2005-07-12 Francois Proulx <francois.proulx@gmail.com>
	* Fixed XML protocol for exchanging hotspots status.
		* Should now be considered stable (stamped v1.0)
	* Fixed hotspots status map to reflect the changes
	* Added french translations
	
2005-07-11 Francois Proulx <francois.proulx@gmail.com>
	* Changed link to hotspots map using NON ssl because Google Keys are sensitive to the whole path.
	
2005-07-11 Benoit Grégoire  <bock@step.polymtl.ca>
	* classes/RssPressReview.php: Begin rewrite. 
	* classes/MainUI.php: Add addFooterScript() function.
	* venues_map.php:  Workaround the IE DOM problem. 

2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Changed wording in hotspots status page added legend
	
2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Minor adjustements to icon positionning
	
2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Changed google maps marker icons
	
2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Added missing elements in XML exchange format
	* Stable v1.0 for XML exchange format and Google Maps mapping
	* Added GMaps constants to config file
	* Unsmartied index.php , added link to map
	* Check config.php to set corresponding values
	* You can now use hotspot_status.php?format=XML along with xslt query string parament to convert your XML document
	* For this to work, You need to have activated XSLT ( see config file )
	
2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Added Google Maps mapping venues_map.php
	* /js/venues_status_map.js  JavaScript code for Mapping
	* In beta : tested successfuly with 48 nodes in the Montreal area, loads in a snap
	
2005-07-03 Francois Proulx <francois.proulx@gmail.com>
	* Updated the XML venues status format ( version 1.0, once approved )
	* Added long / lat fields to nodes table ( for mapping purposes )
	
2005-06-17 Francois Proulx <francois.proulx@gmail.com>
	* Added IFrame and SimpleIFrame content types.
	
2005-06-28 Benoit Grégoire  <bock@step.polymtl.ca>